# claude-skills

./: .gitignore  README.md
hdb-alembic-migrations/: README.md  SKILL.md
hdb-arapahoe-family-law/: SKILL.md
hdb-design/: GUIDELINES.md  SKILL.md  SKILL.md.bak  evaluate.py  program.md  results.tsv  rubric.md  scenarios.md
hdb-detect-debt/: SKILL.md
hdb-golang-developer/: SKILL.md
hdb-merge-conflict-resolver/: README.md  SKILL.md  justfile
hdb-merge-conflict-resolver/scripts/: pyproject.toml
hdb-merge-conflict-resolver/scripts/mergefix/: __init__.py  __main__.py  ai.py  cli.py  db.py  git_ops.py  models.py  resolver.py
hdb-product-researcher/: SKILL.md
hdb-pull-request-reviewer/: SKILL.md
hdb-python-developer/: SKILL.md
hdb-rust-dependency-upgrade/: SKILL.md
hdb-rust-dependency-upgrade/scripts/: streameditor.py
hdb-rust-developer/: SKILL.md
hdb-rust-wasm-ext/: SKILL.md
hdb-split-pr/: SKILL.md
hdb-split-pr/scripts/: README.md  pyproject.toml
hdb-split-pr/scripts/splitpr_00/: __init__.py  __main__.py  ai.py  cli.py  db.py  dependencies.py  git_ops.py  inventory.py  models.py  partition.py  report.py  tasks.py
hdb-split-pr/scripts/splitpr_05/: README.md  __init__.py  __main__.py  ai.py  cli.py  db.py  executor.py  git_ops.py
hdb-split-pr/scripts/splitpr_common/: __init__.py  ai.py  db.py  git_ops.py  models.py
hdb-split-pr/scripts/tests/: test_validate_preconditions.py
mdbook-math-book/: REFERENCE.md  SKILL.md
mdbook-math-book/scripts/: README.md  aggregate-review.py  (+5 more)
mdbook-programming/: REFERENCE.md  SKILL.md  justfile
(+11 files in other folders)
